--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -1,3 +1,4 @@
+<!-- head_custom.html start -->
 <style>
 @media (min-width: 50rem) {
   .main-content {
@@ -19,4 +20,4 @@
   }
 }
 </style>
-</head>
+<!-- head_custom.html end -->
